bin/test/Fall_21_Test_Cases/Good/LO-1/lvl1-good-medium-sa.lo
// good testcase : tsts while loop

int a,i;
{
a = 10;
i=0;
while ((a > i)) {
  i = (i+1);
}
}