bin/test/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-medium-km.lo
//bad case : missing paranthesis

int a;
{
a = 2;
if a > 5
{
a = 5;
}
}